--- a/MyTradeMTG/Views/AdminReports/PrintWelcomeLetter.cshtml
+++ b/MyTradeMTG/Views/AdminReports/PrintWelcomeLetter.cshtml
@@ -731,6 +731,7 @@
                             <p class="mb-0"><span>Address</span> : @ViewBag.Address</p>
                             <p class="mb-0"><span>Mobile No</span> : @ViewBag.MobileNo </p>
                             <p class="mb-0"><span>Date of Activation</span> : @ViewBag.PermanentDate</p>
+                            <p class="mb-0"><span>Total MTG</span> : @ViewBag.FirstTopUpMTG</p>
                             <p class="mb-0"><span>Package </span>: @ViewBag.PackageTypeName (@ViewBag.ProductName)</p><span></span>
 
                         </div>
