--- a/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
+++ b/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
@@ -116,8 +116,8 @@
                                                 <tr class="text-left">
                                                     <td>@i</td>
                                                     @*<td>@Item.LoginId</td>*@
-                                                    <td>@Item.DisplayName</td>
-                                                    <td>@Item.TopupIDRandom</td>
+                                                    <td style="min-width:200px">@Item.DisplayName</td>
+                                                    <td style="min-width:150px">@Item.TopupIDRandom</td>
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PinAmount</td>
                                                     <td>@Item.ActivationMTGToken</td>
