--- a/MyTradeMTG/Views/Franchise/SaleRequest.cshtml
+++ b/MyTradeMTG/Views/Franchise/SaleRequest.cshtml
@@ -22,7 +22,7 @@
                             <h4 class="card-title">Sale Request</h4>
                         </div>
                         <div class="card-body">
-                            @*<div class="row">
+                            <div class="row">
 
                                     <div class="col-md-3">
                                         From Date
@@ -39,7 +39,7 @@
                                             <input class="btn btn-success" type="submit" value="Search" id="btnSearch" name="btnSearch" />
                                         </div>
                                     </div>
-                                </div>*@
+                                </div>
 
                             <div class="table-responsive">
                                 <table id="html5-extension" class="table table-hover non-hover" data-page-length='10'>
