--- a/MyTradeMTG/Views/Wallet/ViewROI.cshtml
+++ b/MyTradeMTG/Views/Wallet/ViewROI.cshtml
@@ -50,8 +50,8 @@
                                     <thead>
                                         <tr>
                                             <th>S No.</th>
-                                            <th>TR2</th>
-                                            <th>TR2 Date</th>
+                                            <th>TR2 Bonus</th>
+                                            <th>TR2 Bonus Date</th>
                                             <th>Status</th>
                                         </tr>
                                     </thead>
