--- a/MyTradeMTG/Views/Report/LevelIncomeTr2Total.cshtml
+++ b/MyTradeMTG/Views/Report/LevelIncomeTr2Total.cshtml
@@ -24,7 +24,7 @@
                                     <thead>
                                         <tr>
                                             <th>Sr No.</th>
-                                            <th>Business MTG Coin</th>
+                                            <th>Business MTG</th>
                                             <th>Income</th>
                                             <th>Level</th>
                                             <th>Status</th>
