--- a/MyTradeMTG/Views/Wallet/ROIIncomeReports.cshtml
+++ b/MyTradeMTG/Views/Wallet/ROIIncomeReports.cshtml
@@ -17,7 +17,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                    <h4>ROI Income</h4>
+                                    <h4>Trade Income</h4>
                                     <span class="text-danger">
                                         @TempData["ROIIncome"]
                                     </span>
@@ -46,8 +46,9 @@
                                         <thead>
                                             <tr>
                                                 <th>S No.</th>
-                                                <th>Login Id</th>
+                                                <th>Login ID</th>
                                                 <th>Name</th>
+                                                <th>TopUp ID</th>
                                                 <th>TopUp Date</th>
                                                 <th>TopUp MTG /USDT</th>
                                                 <th>Action</th>
@@ -65,9 +66,10 @@
                                                             <td>@i</td>
                                                             <td>@Item.LoginId</td>
                                                             <td>@Item.Name</td>
+                                                            <td>@Item.TopUpIdRandom</td>
                                                             <td>@Item.Date</td>
                                                             <td>@Item.TopUpAmount</td>
-                                                            <td><a href="/Wallet/ViewROI?InvId=@Item.Pk_InvestmentId" cl class="btn btn-info btn-sm">View TPS</a></td>
+                                                            <td><a href="/Wallet/ViewROI?InvId=@Item.Pk_InvestmentId" cl class="btn btn-info btn-sm">View</a></td>
                                                         </tr>
                                                         i++;
                                                     }
