--- a/MyTradeMTG/Views/Wallet/ROIWallet.cshtml
+++ b/MyTradeMTG/Views/Wallet/ROIWallet.cshtml
@@ -18,7 +18,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                    <h4>TPS Wallet</h4>
+                                    <h4>TR-2 Wallet</h4>
                                     <span class="text-danger">
                                         @TempData["Package"]
                                     </span>
